Added test case in transactionservicetest for fetch book