@@ -3,11 +3,13 @@ package com.deepaksharma.Library_Management_System.mapper;
 import com.deepaksharma.Library_Management_System.dto.AddUserRequest;
 import com.deepaksharma.Library_Management_System.dto.GetBookResponse;
 import com.deepaksharma.Library_Management_System.dto.GetUserResponse;
+import com.deepaksharma.Library_Management_System.enums.BookStatus;
 import com.deepaksharma.Library_Management_System.enums.UserStatus;
 import com.deepaksharma.Library_Management_System.model.User;
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class UserMapper {
@@ -21,16 +23,17 @@ public class UserMapper {
                 .build();
     }
     public GetUserResponse mapToGetUserResponse(User user){
-        List<GetBookResponse> books = user.getBooks().stream()
+        List<GetBookResponse> issuedBooks = user.getBooks().stream()
+                .filter(book -> book.getBookStatus() == BookStatus.ISSUED)
                 .map(BookMapper::mapToGetBookResponse)
-                .toList();
+                .collect(Collectors.toList());
         return GetUserResponse.builder()
                 .userName(user.getName())
                 .userEmail(user.getEmail())
                 .phoneNumber(user.getPhoneNo())
                 .userAddress(user.getAddress())
                 .userStatus(user.getUserStatus())
-                .books(books)
+                .books(issuedBooks)
                 .build();
     }
 }
